generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model User {
  id         Int          @id @default(autoincrement())
  email      String       @unique
  password   String
  name       String?
  createdAt  DateTime     @default(now())
  updatedAt  DateTime
  deletedAt  DateTime?
  FactorsSet FactorsSet[]
}

model Motivator {
  id           Int        @id @default(autoincrement())
  name         String
  weight       Int
  variable     Boolean?
  factorsSetId Int
  createdAt    DateTime   @default(now())
  updatedAt    DateTime
  deletedAt    DateTime?
  FactorsSet   FactorsSet @relation(fields: [factorsSetId], references: [id], onDelete: Cascade)
}

model Stressor {
  id           Int        @id @default(autoincrement())
  name         String
  weight       Int
  variable     Boolean?
  factorsSetId Int
  createdAt    DateTime   @default(now())
  updatedAt    DateTime
  deletedAt    DateTime?
  FactorsSet   FactorsSet @relation(fields: [factorsSetId], references: [id], onDelete: Cascade)
}

model FactorsSet {
  id        Int         @id @default(autoincrement())
  name      String
  userId    Int
  createdAt DateTime    @default(now())
  updatedAt DateTime
  deletedAt DateTime?
  User      User        @relation(fields: [userId], references: [id], onDelete: Cascade)
  Motivator Motivator[]
  Stressor  Stressor[]
  Template  Template[]
}

model Template {
  id           Int        @id @default(autoincrement())
  name         String
  factorsSetId Int
  createdAt    DateTime   @default(now())
  updatedAt    DateTime
  deletedAt    DateTime?
  FactorsSet   FactorsSet @relation(fields: [factorsSetId], references: [id], onDelete: Cascade)
}
