@startuml yonde

' hide the spot
hide circle
' avoid problems with angled crows feet
skinparam linetype ortho

entity users {
  * id : number <<generated>>
  --
  * email : text <<unique>>
  * password : text <<encrypted>>
  * name : text
  * created_at
  * updated_at
    deleted_at
}

entity factorsSets {
  * id : number <<generated>>
  --
  * name : text
  * user_id : number
  * created_at
  * updated_at
    deleted_at
}

entity motivators {
  * id : number <<generated>>
  --
  * name : text
  * weight : text
    variable: boolean
  * factors_set_id : number
  * created_at
  * updated_at
    deleted_at
}

entity stressors {
  * id : number <<generated>>
  --
  * name : text
  * weight : text
    variable: boolean
  * factors_set_id : number
  * created_at
  * updated_at
    deleted_at
}

entity templates {
  * id : number <<generated>>
  --
  * name : text
  * factors_set_id : number <<unique>>
  * created_at
  * updated_at
    deleted_at
}

users ||--o{ factorsSets
factorsSets ||--o{ motivators
factorsSets ||--o{ stressors
templates |o--|| factorsSets

@enduml
